welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:14: error: type mismatch;
 found   : Unit
 required: Boolean
      return
      ^Program:18: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^